# scrooge-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Procfile  README.md  alembic.ini  config.py  const.py  main.py  pyproject.toml  run.py  setup.cfg
.github/workflows/: deploy.yaml
app/: __init__.py  bot.py  db.py  logging.py  settings.py
bot/: __init__.py  bot.py  const.py  core.py  dispatcher.py  middlewares.py  states.py
bot/handlers/: __init__.py  add_expense.py  history.py  main.py  reports.py
bot/resources/: buttons.py  messages.py
bot/utils/: parsing.py
bot/views/: __init__.py  add_expense.py  history.py  main.py  reports.py
db/: database.py  metadata.py
db/tables/: __init__.py  expenses.py  transactions.py
libs/: base_model.py  base_repo.py  base_service.py  model_factory.py  sql_utils.py
migrations/: env.py
migrations/versions/: 0bdd8a2afcba_expenses_table.py  3735ead36f19_update_categories_names.py  3ef2024fb715_users_table.py  556bd3adc3f7_update_categories_names.py  71d77707438c_init.py  cb567e4e0856_transactions_table.py  f3719c0279ef_init.py
modules/: __init__.py
modules/accounts/: __init__.py  consts.py  exports.py  internals.py  models.py  repository.py  schemas.py  service.py  tables.py
modules/bot/: __init__.py  bot.py  const.py  internals.py  routes.py
modules/categories/: __init__.py  consts.py  internals.py  models.py  repository.py  tables.py
modules/core/: __init__.py  consts.py
modules/db/: __init__.py  database.py
schemas/: expense.py  user.py
services/: base.py  expenses.py  transactions.py  users.py
(+49 files in other folders)
