[tool.poetry]
name = "scrooge-bot"
version = "0.1.0"
description = "Telegram bot for expense tracking"
authors = ["Vlad Pastushenko <vladp@ro.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.9.2"
pydantic = "^1.6.1"
python-dotenv = "^0.14.0"
dateparser = "^0.7.6"
databases = {version = "^0.4.1", extras = ["postgresql"]}
alembic = "^1.5.5"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^5.4.2"
mypy = "^0.782"
rope = "^0.18.0"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
