[tool.poetry]
name = "scrooge-bot"
version = "0.1.0"
description = "Telegram bot for expense tracking"
authors = ["Vlad Pastushenko <vladp@ro.ru>"]

[tool.poetry.dependencies]
python = "3.10.1"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
python-dotenv = "^0.20.0"
colorlog = "^6.6.0"
aiogram = "^2.20"
fastapi-security-telegram-webhook = "^0.2.0"
alembic = "^1.7.7"
psycopg2 = "^2.9.3"
aioredis = "^2.0.1"
gunicorn = "^20.1.0"
databases = {extras = ["postgresql"], version = "^0.5.5"}
dateparser = "^0.7.6"
flake8-quotes = "^3.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.3.0"
pre-commit = "^2.18.1"
mypy = "^0.950"
types-dateparser = "^1.1.2"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
